Creating the book search method

--- a/GoogleBooks/GoogleBooks/GoogleBooks.csproj
+++ b/GoogleBooks/GoogleBooks/GoogleBooks.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs" Version="7.2.0.561" />
     <PackageReference Include="DryIoc" Version="4.8.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Text.Json" Version="6.0.1" />
