--- a/GoogleBooks/GoogleBooks.iOS/GoogleBooks.iOS.csproj
+++ b/GoogleBooks/GoogleBooks.iOS/GoogleBooks.iOS.csproj
@@ -126,6 +126,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.2.0.561</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.7.335</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading">
       <Version>2.4.11.982</Version>
     </PackageReference>
